<resources>
    <string name="app_name" translatable="false">JAPP</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="you_don_t_have_an_account_yet">You don\'t have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_an_account">Create an Account</string>
    <string name="phone_number">Phone number</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="organization">Organization</string>
    <string name="sign_in2">Sign in</string>
    <string name="name_alert">Please enter your name</string>
    <string name="email_alert_1">Please enter email address</string>
    <string name="email_alert_2">Please enter valid email address</string>
    <string name="pass_alert">Please enter password</string>
    <string name="pass_alert2">Password should contain capital letters</string>
    <string name="phone_alert">Please enter phone number</string>
    <string name="phone_alert2">Please enter valid phone number</string>
    <string name="edt_alert">Please enter this field</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="checkbox_alert">please choose your role</string>
    <string name="name">Name</string>
    <string name="find_your">Find Your</string>
    <string name="dream_job">Dream Job</string>
    <string name="here">Here!</string>
    <string name="splash_text">Explore all the most exciting job roles based on your interest and study major.</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="my_jobs">My jobs</string>
    <string name="full_time">Full-time</string>
    <string name="part_time">Part-time</string>
    <string name="job_list">Job List</string>
    <string name="applicant_list">Applicant List</string>
    <string name="read_more">Read more</string>
    <string name="your_compatibility_percentage_with_this_job">Your Compatibility Percentage With This Job</string>
    <string name="your_compatibility_percentage_with_this_job_seeker">Your Compatibility Percentage With This Job seeker</string>
    <string name="find_your_job">Find Your Job</string>
    <string name="find_your_employee">Find Your employee</string>
    <string name="job_description">Job Description</string>
    <string name="requirements">Requirements</string>
    <string name="information">Information</string>
    <string name="position">Position</string>
    <string name="qualification">Qualification</string>
    <string name="experience">Experience</string>
    <string name="job_type">Job Type</string>
    <string name="specialization">Specialization</string>
    <string name="apply_now">APPLY NOW</string>
    <string name="forward_back" translatable="false">imageForwardBack</string>
    <string name="company_image">companyImage</string>
    <string name="categories">Categories :</string>
    <string name="edit_profile">Edit profile</string>
    <string name="personal_information">Personal information</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="city">City</string>
    <string name="nationality">Nationality</string>
    <string name="skills">Skills</string>
    <string name="add">+ADD</string>
    <string name="education">Education</string>
    <string name="languages">Languages</string>
    <string name="save">Save</string>
    <string name="notification">notification</string>
    <string name="saved_jobs">saved jobs</string>
    <string name="pending">pending</string>
    <string name="active">active</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="adding_item">Adding Item</string>
    <string name="text">text</string>
    <string name="cancel">cancel</string>
    <string name="finance">Finance</string>
    <string name="food">Food</string>
    <string name="marketing">Marketing</string>
    <string name="programming">Technology</string>
    <string name="law">Law</string>
    <string name="health">Health</string>
    <string name="error">something wrong</string>
    <string name="job_details">Job details</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="update_password">Update Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="are_you_sure_you_want_to_leave">Are you sure you want to leave?</string>
    <string name="yes">Yes</string>
    <string name="add_post">add post</string>
    <string name="jobs">jobs</string>
    <string name="name_of_organization">Name of Organization</string>
    <string name="organization_location">Organization Location</string>
    <string name="city_of_organization">City of Organization</string>
    <string name="required_service">Required Service</string>
    <string name="organization_size">Organization size</string>
    <string name="_1_5" translatable="false">1-5</string>
    <string name="_6_24" translatable="false">6-24</string>
    <string name="_25_49" translatable="false">25-49</string>
    <string name="_50_149" translatable="false">50-149</string>
    <string name="_200" translatable="false">+200</string>
    <string name="company_description">Company description</string>
    <string name="write_additional_information_here">Write additional information here</string>
    <string name="post_title">Post Title</string>
    <string name="write_the_title_of_your_post_here">Write the title of your post here</string>
    <string name="description">Description</string>
    <string name="what_do_you_want_to_talk_about">What do you want to talk about?</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="verify">Verify</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="we_have_sent_the_verification_code_to_email_address">We have sent the verification code to email address </string>
    <string name="open_your_email">open your email</string>
    <string name="back_to_sign_in">back to sign in</string>
    <string name="you_have_not_received_the_email">you have not received the email?</string>
    <string name="resend">Resend</string>
    <string name="all">All</string>
    <string name="cv">CV</string>
    <string name="upload">Upload</string>
    <string name="download_cv">Download CV</string>
    <string name="show_cv">Show CV</string>
    <string name="no_email_client">There is no email client installed.</string>
    <string name="apply_job">Officially You applied on this job</string>
    <string name="reject_user">Done you reject this applicant</string>
    <string name="accept_user">Done you accept this applicant</string>
    <string name="save_data">Done , succeed you saved the data</string>
    <string name="picked_file">You haven\'t picked file</string>
    <string name="same_password">Please enter the same password in the 2 fields</string>
    <string name="choose_language">choose the language</string>
    <string name="ar">Arabic</string>
    <string name="en">English</string>
    <string name="you_already_have_an_account">You already have an account ?</string>
    <string name="not_found_active_jobs">Not Found Active Jobs</string>
    <string name="not_found">Not found</string>
    <string name="not_found_notifications">Not Found Notifications</string>
    <string name="not_found_jobs">Not Found Jobs</string>
    <string name="edit">Edit</string>
    <string name="eng">Engineering</string>
    <string name="translation">Translation</string>
    <string name="edit_photo">Edit photo</string>
    <string name="filter">Filter</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="last_name">Last Name</string>
    <string name="value">Value</string>
    <string name="job_title">Job title</string>
    <string name="adding_requirement">Adding requirement</string>
    <string name="priority_of_requirement">priority of requirement % :</string>
    <string name="matching_requirements">Matching requirements</string>
    <string name="engineering">Engineering</string>
    <string name="technology">Technology</string>
    <string name="done">DONE</string>
    <string name="company_size">Company size</string>

    <string-array name="type">
        <item>Full time</item>
        <item>Part time</item>
    </string-array>

    <string-array name="categories">
        <item>Education</item>
        <item>Engineering</item>
        <item>Finance</item>
        <item>Translation</item>
        <item>Marketing</item>
        <item>Food</item>
        <item>Law</item>
        <item>Technology</item>
        <item>Health</item>
    </string-array>
</resources>