<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="serif"
        android:text="@string/adding_item"
        android:textColor="@color/blue"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_edt_text"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_7sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/text"
            android:inputType="textPersonName"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/blue" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/ll_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_edt_text">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_3sdp"
            android:text="@string/priority_of_requirement"
            android:textColor="@color/blue"
            android:textSize="@dimen/_13ssp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_edt_value"
            android:layout_margin="@dimen/_3sdp"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_7sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawablePadding="@dimen/_5sdp"
                android:hint="@string/value"
                android:inputType="number"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/blue" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_value">

        <Button
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reject_bg"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <Button
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:background="@drawable/accept_bg"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>